# ros_gz_lehrforst_sim

./: CMakeLists.txt  README.md
config/: bunker_bridges.yaml  scout_bridges.yaml
launch/: bunker_lehrforst.launch.xml  bunker_lehrforst_headless.launch.xml  scout.launch.xml  scout_bumper.launch.xml  scout_bumper_headless.launch.xml  scout_headless.launch.xml
models/bunker/: model.sdf  model.xacro
models/lehrforst/: generate_lehrforst_trees_model_sdf.py  model.sdf
models/lehrforst_trees/: generate_lehrforst_trees_model_sdf.py
models/scout/: model.xacro
models/scout_bumper/: model.xacro
worlds/: bunker_lehrforst.sdf  scout_bumper_lehrforst.sdf  scout_lehrforst.sdf
